# Tickets-Plus

./: .deepsource.toml  .gitignore  .pylintrc  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  example_alembic.ini  example_config.json  example_secret.json  extchecks.py  main_utils.py  override.py  pylintrc  pyproject.toml  requirements.txt  runtimeconfig.json  settings.py  start_bot.py  style1.css  variables.py
.devcontainer/: devcontainer.json
.github/: .restyled.yml  FUNDING.yml  dependabot.yml  pull_request_template.md  restyled.yml
.github/.github/: .restyled.yml
.github/ISSUE_TEMPLATE/: config.yml  enhancement.md  enhancement.yaml  feature.yaml  issue.md  issue.yaml  question.yaml
.github/workflows/: codeql.yml  dependency-review.yml  docs.yml  pylint.yml
alembic/: env.py  script.py.mako
alembic/versions/: 242c1f9f1463_v0_1_1_0_part2_notification.py  34a151505735_added_legacy_staff_notes.py  8c4e4c4f3661_v0_1_1_0_integration_upgrade.py  8c713ab3df0b_v0_1_0_1_part_2_database.py  ae5d2cc3d90b_v0_1_0_1_database.py
branding/: LICENSE  browserconfig.xml  site.webmanifest
docs/: database_info.html  privacy.html  style.css  terms.html
pdoc/: module.html.jinja2
tickbot/: __init__.py  extchecks.py
tickbot/cogs/: main_utils.py  override.py  settings.py
tickbot/database/: __init__.py  layer.py  models.py  statvars.py
ticket_plus/: __init__.py
ticket_plus/cogs/: main_utils.py  override.py  settings.py
ticket_plus/database/: layer.py  models.py  statvars.py
ticket_plus/ext/: checks.py
ticket_plus/extensions/: checks.py
tickets_plus/: __init__.py  __main__.py  bot.py  nuke.py
tickets_plus/api/: __init__.py  handlers.py  routes.py
tickets_plus/cogs/: __init__.py  errors.py  events.py  main_utils.py  override.py  routines.py  settings.py  staff.py  tags.py
tickets_plus/database/: __init__.py  config.py  const.py  database_model.md  layer.py  models.py  statvars.py
tickets_plus/ext/: __init__.py  checks.py  exceptions.py  legacy.py  views.py
toolbox/: legacy.py  migrate.py  nuke.py
