[tool.poetry]
name = "tickets-plus"
version = "0.3.0.0c"
description = "A companion bot adding some extensions to Tickets discord bot. Experimental."
authors = ["Tech. TTGames <50541739+Tech-TTGames@users.noreply.github.com>"]
license = "EPL-2.0"
readme = "README.md"
packages = [{include = "tickets_plus"}]
exclude = ["branding"]

[tool.poetry.dependencies]
python = ">=3.12.8,<3.14"
"discord.py" = "^2.6.4"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.44"}
alembic = {extras = ["tz"], version = "^1.16.5"}
asyncpg = { version = "^0.30.0", optional = true }
aiosqlite = { version = "^0.21.0", optional = true }
pynacl = "^1.5.0"
tornado = "^6.5"
tzdata = "^2025.2"

[tool.poetry.extras]
sqlite = ["aiosqlite"]
pgsql = ["asyncpg"]
database = ["asyncpg", "aiosqlite"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
yapf = "^0.43.0"
pylint = "^4.0.4"
pdoc = "^15.0.4"

[tool.poetry.scripts]
start = "tickets_plus.__main__:main"
migrate = "toolbox.migrate:main"
nuke = "toolbox.nuke:main"

[tool.yapf]
based_on_style = "google"
column_limit = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
